--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "game-store",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://malish-undead-core.github.io/game-store",
+  "homepage": "https://malish-undead-core.github.io/game-store/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-paged -d build",
-    "predeploy": "yarn run build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "yarn build"
   },
   "eslintConfig": {
     "extends": [
